--- a/index.css
+++ b/index.css
@@ -20,3 +20,12 @@ ul{
 {
     margin-top: 20px;
 }
+.banner-container
+{
+    display: flex;
+    border: 1px solid black;
+    padding: 50px;
+    justify-content: space-around;
+    align-items: center;
+    background-image: url("background.png");
+}
