--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 body
 {
-   
+    margin: 0px;
+    padding: 0px;
 }
 .nav-container
 {
@@ -22,10 +23,28 @@ ul{
 }
 .banner-container
 {
-    display: flex;
     border: 1px solid black;
     padding: 50px;
+    background-image: url("images/background\ 1.jpg");
+    display: flex;
     justify-content: space-around;
     align-items: center;
-    background-image: url("background.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: white;
+    height: 800px;
+}
+.banner-info
+{
+}
+.button
+{
+    background-color: red;
+    padding: 10px;
+    border-radius: 10px;
+    border: 2px solid black;
+    color: white;
+    width: 150px;
+    height: 50px;
 }
