--- a/index.css
+++ b/index.css
@@ -3,6 +3,7 @@ body
     margin: 0px;
     padding: 0px;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    background-color: #EFEFEF;
 }
 .nav-container
 {
