--- a/index.css
+++ b/index.css
@@ -67,4 +67,30 @@ ul{
     margin:0px;
     padding:0px;
 }
+.bmg1
+{
+    background-image: url(images/background6.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: white;
+    height: 550px;
+}
+.service-box-container
+{
+    display: flex;
+    justify-content: space-around;
+}
+.box
+{
+    text-align: center;
+    border: 1px solid white;
+background-color: black;
+    border-radius: 15px;
+    padding: 20px;
+    width: 230px;
+    background-color: rgba(0,0,0,0.4);
+    font-size: smaller;
+    
+}
 
