--- a/index.css
+++ b/index.css
@@ -46,7 +46,18 @@ ul{
     border-radius: 10px;
     color: white;
     width: 150px;
-    height: 50px;
+    height: 50px; 
+    border: 1px solid rgb(255, 0, 0);
+}
+.button2
+{   
+    background-color: red;
+    padding: 10px;
+    border-radius: 10px;
+    color: white;
+    width: 100px;
+    height: px;
+    border:1px solid black;
 }
 .about-us-container
 {
@@ -85,12 +96,12 @@ ul{
 {
     text-align: center;
     border: 1px solid white;
-background-color: black;
     border-radius: 15px;
     padding: 20px;
     width: 230px;
-    background-color: rgba(0,0,0,0.4);
-    font-size: smaller;
-    
+    background-color: rgba(0,0,0,0.3);
+    font-size: smaller;  
+    box-shadow: 1px 1px 30px rgb(231, 181, 181);
 }
+
 
